--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ nav {
 }
 
 .nav-links {
-	width: 40%;
+	width: 500px;
 	display: flex;
 	justify-content: space-between;
 }
@@ -58,7 +58,7 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 9vh;
+	gap: 8vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-size: 2.5em;
+	font-size: 4em;
 }
 
 h2 {
@@ -75,9 +75,13 @@ h2 {
 
 #book-btn {
 	background-color: #2e8b57;
-	padding: 20px 40px;
-	font-size: 1em;
+	padding: 20px 60px;
+	font-size: 1.2em;
 	border: none;
 	border-radius: 30px;
 	color: #FFEFD4;
+}
+
+#approach {
+	margin-top: 150px;
 }
